test/files/neg/bug3123.scala
object NotAValue {
  def test[T](t : T) {
    t match { case Int => true }
  }
}
