test/files/neg/bug3123.check
bug3123.scala:3: error: object Int is not a value
    t match { case Int => true }
                   ^
one error found
